refactored : removed Race class